# CPP-Marathon

./: .gitignore  CMakeLists.txt
Race01/msavytskyi/: CMakeLists.txt
Race01/msavytskyi/3dparty/: CMakeLists.txt
Race01/msavytskyi/app/: CMakeLists.txt  main.cpp
Race01/msavytskyi/app/src/: CMakeLists.txt
Sprint00/check/msavytskyi/: .gitignore
Sprint00/check/msavytskyi/t00/: CMakeLists.txt
Sprint00/check/msavytskyi/t01/: printDialog.h
Sprint00/check/msavytskyi/t02/: CMakeLists.txt  main.cpp  walletManager.cpp
Sprint00/check/msavytskyi/t03/: castSpells.cpp  castSpells.h
Sprint00/check/msavytskyi/t05/: main.cpp
Sprint00/check/msavytskyi/t06/: CMakeLists.txt
Sprint00/check/msavytskyi/t07/: CMakeLists.txt
Sprint00/msavytskyi/t01/: CMakeLists.txt  printDialog.cpp
Sprint00/msavytskyi/t02/: main.cpp  walletManager.h
Sprint00/msavytskyi/t03/: CMakeLists.txt
Sprint00/msavytskyi/t04/: CMakeLists.txt  referenceOrPointer.cpp  referenceOrPointer.h
Sprint00/msavytskyi/t05/: CMakeLists.txt
Sprint00/msavytskyi/t06/: meadSong.cpp  meadSong.h
Sprint00/msavytskyi/t07/: main.cpp
Sprint01/check/t00/: main.cpp
Sprint01/check/t01/: CMakeLists.txt
Sprint01/check/t03/: main.cpp
Sprint01/check/t05/: main.cpp
Sprint01/msavytskyi/t00/: CMakeLists.txt
Sprint01/msavytskyi/t01/: main.cpp
Sprint01/msavytskyi/t02/: CMakeLists.txt  main.cpp
Sprint01/msavytskyi/t03/: CMakeLists.txt
Sprint01/msavytskyi/t04/: CMakeLists.txt  main.cpp
Sprint01/msavytskyi/t05/: CMakeLists.txt  main.cpp
Sprint02/check/: .gitignore
Sprint02/check/t00/: CMakeLists.txt  main.cpp
Sprint02/check/t01/: main.cpp
Sprint02/check/t02/: CMakeLists.txt
Sprint02/check/t03/: CMakeLists.txt  main.cpp
Sprint02/msavytskyi/t00/: main.cpp
Sprint02/msavytskyi/t01/: CMakeLists.txt  main.cpp
Sprint02/msavytskyi/t02/: main.cpp
Sprint03/check/t02/: sumOfArguments.h
Sprint03/check/t03/: sumFileData.h
Sprint03/check/t04/: outputContainer.h
Sprint03/msavytskyi/: .gitignore
Sprint03/msavytskyi/t00/: templateAddition.h
Sprint03/msavytskyi/t01/: outputAny.h
Sprint03/msavytskyi/t05/: squareValue.h
Sprint03/msavytskyi/t06/: isPalindrome.h
Sprint03/msavytskyi/t07/: sortValues.h
Sprint04/check/t00/utils/: CMakeLists.txt  algorithmUtils.h
Sprint04/check/t01/app/: CMakeLists.txt
Sprint04/check/t02/app/: CMakeLists.txt  main.cpp
Sprint04/msavytskyi/t00/: main.cpp
Sprint04/msavytskyi/t01/app/: main.cpp
Sprint04/msavytskyi/t03/app/: CMakeLists.txt  main.cpp
Sprint05/check/t01/app/: CMakeLists.txt
Sprint05/check/t02/app/: main.cpp
Sprint05/check/t03/app/: main.cpp
Sprint05/check/t04/app/: main.cpp
Sprint05/check/t05/app/: CMakeLists.txt  main.cpp
Sprint05/msavytskyi/t00/app/: main.cpp
Sprint05/msavytskyi/t01/app/: main.cpp
Sprint05/msavytskyi/t02/app/: main.cpp
Sprint05/msavytskyi/t04/app/: main.cpp
Sprint06/check/t00/app/: CMakeLists.txt  main.cpp
Sprint06/check/t02/app/: main.cpp
Sprint06/msavytskyi/t01/app/: CMakeLists.txt  main.cpp
Sprint06/msavytskyi/t02/app/: CMakeLists.txt
Sprint07/check/t00/utils/: vector.h
Sprint07/msavytskyi/t00/: c7cef.cpp
Sprint08/msavytskyi/t00/app/: CMakeLists.txt  main.cpp
Sprint08/msavytskyi/t01/app/: CMakeLists.txt  main.cpp
Sprint08/msavytskyi/t02/app/: CMakeLists.txt  main.cpp
Sprint08/msavytskyi/t03/app/: CMakeLists.txt  main.cpp
Sprint08/msavytskyi/t04/: CMakeLists.txt
Sprint08/msavytskyi/t04/app/: CMakeLists.txt  main.cpp
Sprint08/msavytskyi/t04/app/src/: CMakeLists.txt  Serializer.h  SomeClass.h
Sprint09/check/t00/app/: CMakeLists.txt  main.cpp
Sprint09/check/t01/app/: CMakeLists.txt
Sprint09/check/t02/app/: main.cpp
Sprint09/check/t05/: CMakeLists.txt
Sprint09/msavytskyi/t00/: CMakeLists.txt
Sprint09/msavytskyi/t02/app/: CMakeLists.txt
Sprint09/msavytskyi/t02/app/src/: CMakeLists.txt
(+112 files in other folders)
